maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:41: error: ';' expected but ')' found.
  	prendBiscuit)()
                    ^